# Learning-TensorRT

./: README.md
MNIST/: CMakeLists.txt  build.cu  runtime.cu  torch2onnx.py  train.py
yolov8/: CMakeLists.txt  build.cu  runtime.cu  yolov8_utils.cpp
yolov8_accelerate/: CMakeLists.txt  build.cu  calibrator.cpp  calibrator.h  int8calib.table  runtime.cu  yolov8_utils.cpp  yolov8_utils.h
